added extended track settings (in progress)

--- a/src/Scup.css
+++ b/src/Scup.css
@@ -118,6 +118,10 @@ s|SkinnableComponent
 	borderStyle: solid;
 	borderThickness: 1;
 }
+.gridRowTrack
+{
+	borderColor: #e2e4e7;
+}
 .right
 {
 	textAlign: right; 
